updated html metadata for links and favicon

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/apple/285/french-fries_1f35f.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -29,18 +29,18 @@
     
     <!-- Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://buildspace.so/">
-    <meta property="og:title" content="Candy Drop">
-    <meta property="og:description" content="Mint a limited NFT drop on Solana.">
-    <meta property="og:image" content="https://s3.amazonaws.com/cdn.buildspace.so/courses/solana-nft/metadata.png">
+    <meta property="og:url" content="http://www.mickeydegods.com/">
+    <meta property="og:title" content="Mint a Secret Menu Item">
+    <meta property="og:description" content="Mickey DeGods - Godly Fast Food.">
+    <meta property="og:image" content="http://www.mickeydegods.com/uploads/1/3/9/9/139934606/published/were-burning-it.png?1637794073">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://buildspace.so/">
-    <meta property="twitter:title" content="Candy Drop">
-    <meta property="twitter:description" content="Mint a limited NFT drop on Solana.">
+    <meta property="twitter:url" content="http://www.mickeydegods.com/">
+    <meta property="twitter:title" content="Mint a Secret Menu Item">
+    <meta property="twitter:description" content="Mickey DeGods - Godly Fast Food.">
     <meta property="twitter:image"
-      content="https://s3.amazonaws.com/cdn.buildspace.so/courses/solana-nft/metadata.png">
+      content="http://www.mickeydegods.com/uploads/1/3/9/9/139934606/published/were-burning-it.png?1637794073">
     </head>
   </head>
   <body>
