--- a/app/public/index.html
+++ b/app/public/index.html
@@ -32,7 +32,7 @@
     <meta property="og:url" content="http://www.mickeydegods.com/">
     <meta property="og:title" content="Mint a Secret Menu Item">
     <meta property="og:description" content="Mickey DeGods - Godly Fast Food.">
-    <meta property="og:image" content="http://www.mickeydegods.com/uploads/1/3/9/9/139934606/published/were-burning-it.png?1637794073">
+    <meta property="og:image" content="http://www.mickeydegods.com/uploads/1/3/9/9/139934606/questionable-soft-serve_1.png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -40,7 +40,7 @@
     <meta property="twitter:title" content="Mint a Secret Menu Item">
     <meta property="twitter:description" content="Mickey DeGods - Godly Fast Food.">
     <meta property="twitter:image"
-      content="http://www.mickeydegods.com/uploads/1/3/9/9/139934606/published/were-burning-it.png?1637794073">
+      content="http://www.mickeydegods.com/uploads/1/3/9/9/139934606/questionable-soft-serve_1.png">
     </head>
   </head>
   <body>
